--- a/Parcial/.github/workflows/sonarcloud.yml
+++ b/Parcial/.github/workflows/sonarcloud.yml
@@ -13,32 +13,38 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
+      # 1️⃣ Clonar el repositorio
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # 2️⃣ Configurar .NET
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '7.0.x'
 
+      # 3️⃣ Preparar SonarCloud
       - name: Setup SonarCloud
         uses: SonarSource/sonarcloud-github-action@v2.2.0
         with:
           organization: mazp73
           projectKey: parcial
-          projectName: parcial
+          projectName: Parcial
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
+      # 4️⃣ Restaurar dependencias dentro de la subcarpeta
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore Parcial/Parcial.csproj
 
+      # 5️⃣ Comenzar análisis de SonarCloud
       - name: Begin SonarScanner
         run: dotnet sonarscanner begin /k:"parcial" /o:"mazp73" /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
 
+      # 6️⃣ Compilar el proyecto desde la subcarpeta
       - name: Build project
-        run: dotnet build --no-restore --configuration Release
+        run: dotnet build Parcial/Parcial.csproj --no-restore --configuration Release
 
+      # 7️⃣ Finalizar análisis de SonarCloud
       - name: End SonarScanner
         run: dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
