--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,42 +1,50 @@
-name: SonarCloud Analysis
+name: SonarCloud
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:
+    types: [opened, synchronize, reopened]
 
 jobs:
   build:
     name: Build and Analyze
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
-      # 1️⃣ Clonar el repositorio
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Required by SonarCloud
 
-      # 2️⃣ Configurar .NET
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '7.0.x'
+          dotnet-version: '8.0.x' # Cambia según tu versión
 
-      # 3️⃣ Restaurar dependencias
       - name: Restore dependencies
-        run: dotnet restore Parcial/Parcial.csproj
+        run: dotnet restore
 
-      # 4️⃣ Build del proyecto
-      - name: Build project
-        run: dotnet build Parcial/Parcial.csproj --configuration Release --no-restore
+      - name: Build
+        run: dotnet build --no-restore --configuration Release
 
-      # 5️⃣ Ejecutar SonarCloud Analysis
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v2.2.0
-        with:
-          organization: mazp73
-          projectKey: parcial
-          projectName: Parcial
+      - name: Test
+        run: dotnet test --no-build --configuration Release --collect:"XPlat Code Coverage"
+
+      - name: Run SonarCloud Scan
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        uses: SonarSource/sonarcloud-github-action@v2
+        with:
+          args: >
+            -Dsonar.organization=mazp73
+            -Dsonar.projectKey=parcial
+            -Dsonar.projectName=parcial
+            -Dsonar.sources=.
+            -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.cs.opencover.reportsPaths=**/coverage.opencover.xml
+
+      - name: Publish Test Results (for coverage)
+        run: |
+          echo "Generating coverage files..."
