--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: Parcial  # ← Tu proyecto está dentro de la carpeta "Parcial"
+        working-directory: Parcial
 
     steps:
       - name: Checkout repository
@@ -22,22 +22,18 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup .NET
+      - name: Setup .NET 8
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '8.0.x'
+          include-prerelease: false
 
-      # ---------------------------------------------
-      # Build WRAPPER (NO se usa en C#, pero lo dejaste en la plantilla)
-      # ---------------------------------------------
-
-      - name: Install Build Wrapper (not required for C#, but included as requested)
-        uses: SonarSource/sonarqube-scan-action/install-build-wrapper@v6
-
-      - name: Run Build Wrapper (C# does not need this, but left for template compatibility)
+      - name: Remove .NET 9 from PATH (fix restore issues)
+        shell: pwsh
         run: |
-          build-wrapper-win-x86-64.exe --out-dir build_wrapper_output_directory dotnet build BadCleanArch.sln -c Release
-      # ---------------------------------------------
+          $paths = $Env:PATH -split ';' | Where-Object { $_ -notmatch 'dotnet' -or $_ -match '8\.0' }
+          $Env:PATH = ($paths -join ';')
+          dotnet --info
 
       - name: Restore
         run: dotnet restore BadCleanArch.sln
@@ -60,4 +56,3 @@ jobs:
             --define "sonar.sources=src"
             --define "sonar.host.url=https://sonarcloud.io"
             --define "sonar.cs.opencover.reportsPaths=**/coverage.opencover.xml"
-            --define "sonar.cfamily.compile-commands=build_wrapper_output_directory/compile_commands.json"
