--- a/Parcial/src/Infrastructure/Infrastructure.csproj
+++ b/Parcial/src/Infrastructure/Infrastructure.csproj
@@ -4,4 +4,9 @@
     <Nullable>disable</Nullable>
     <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Application\Application.csproj" />
+    <ProjectReference Include="..\Domain\Domain.csproj" />
+  </ItemGroup>
 </Project>
