--- a/Parcial/src/Domain/Domain.csproj
+++ b/Parcial/src/Domain/Domain.csproj
@@ -4,4 +4,9 @@
     <Nullable>disable</Nullable>
     <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
+
+    <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+  </ItemGroup>
+  
 </Project>
